# Hesiod

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  mkdocs.yml
Hesiod/: CMakeLists.txt
Hesiod/app/: darkstyle.css  main.cpp
Hesiod/data/: cmap.json  color_gradient.json  default.hsd  node_documentation.json  quick_start.html
Hesiod/data/bootstraps/: _default.hsd  basic_mountain_range.hsd  facing_strata.hsd  island.hsd  meander.hsd  stepping_shore.hsd  texturing_101.hsd  twin_peaks.bak.hsd  twin_peaks.hsd  twin_peaks_autosave.hsd
Hesiod/data/color_gradients/: 051c4a.json  06d0d3.json  154abe.json  17e67d.json  19354f.json  200b67.json  277d46.json  376b60.json  4153cd.json  428333.json  459ca6.json  468801.json  48a9c3.json  4e2050.json  4ff108.json  54cd78.json  5995c7.json  6588a0.json  736888.json  771b3c.json  780427.json  7f27bd.json  84a5d1.json  8ef2a2.json  94b013.json  9aa90a.json  b071dc.json  b49b6c.json  b8e244.json  bc6950.json  bf4b51.json  c386e3.json  c8001c.json  ceb39f.json  cf1702.json  e0b6b6.json  e34d7a.json  f0afea.json  f57b18.json  fe1bcc.json
Hesiod/data/examples/: Badlands.hsd  Bump.hsd  BumpLorentzian.hsd  CloudShuffle.hsd  CoastalErosionDiffusion.hsd  FlatbedCarve.hsd  FloodingFromBoundaries.hsd  FloodingFromPoint.hsd  FloodingLakeSystem.hsd  FloodingUniformLevel.hsd  FlowSimulationViscous.hsd  HeightmapToNormalMap.hsd  IslandLandMask.hsd  MergeWaterDepths.hsd  PathFractalize.hsd  PathShuffle.hsd  Rifts.hsd  RotateDisplacement.hsd  SelectSoilRocks.hsd  SelectSoilWeathered.hsd  Strata.hsd  Thru.hsd  Transfer.hsd  WaterDepthDryOut.hsd  WaterDepthFromMask.hsd  WaterMask.hsd  WatershedRidge.hsd  WaveletNoise.hsd  default.hsd
Hesiod/generate_node_snapshot/: generate_node_snapshot.cpp  generate_node_snapshot.hpp
Hesiod/include/hesiod/: attribute.hpp  config.hpp  control_node.hpp  control_tree.hpp  fonts.hpp  graph_editor.hpp  graph_manager.hpp  gui.hpp  hmap_brush_editor.hpp  logger.hpp  render.hpp  serialization.hpp  shortcuts.hpp  timer.hpp  utils.hpp  view_node.hpp  view_tree.hpp  viewer.hpp  widgets.hpp  window.hpp  windows.hpp
Hesiod/include/hesiod/app/: app_context.hpp  app_settings.hpp  enum_mappings.hpp  hesiod_application.hpp  style_settings.hpp
Hesiod/include/hesiod/cli/: batch_mode.hpp
Hesiod/include/hesiod/data/: cloud_data.hpp  heightmap_data.hpp  heightmap_rgba_data.hpp  heightmap_vector_data.hpp  kernel_data.hpp  mask_data.hpp  path_data.hpp
Hesiod/include/hesiod/gui/: darkstyle.css  gui_utils.hpp  h_preview.hpp  h_viewer2d.hpp  main_window.hpp  node_category_color.hpp  node_editor_widget.hpp  node_settings_widget.hpp  preview.hpp  project_ui.hpp  settings_dialog.hpp  style.hpp  view_nodes.hpp  viewer2d.hpp  viewer2d_widget.hpp  viewer3d_widget.hpp  widgets.hpp
Hesiod/include/hesiod/model/: attributes.hpp  attributes_highmap.hpp  bake_config.hpp  base_node.hpp  broadcast_param.hpp  cmap.hpp  color_gradient.hpp  enum_mapping.hpp  export_param.hpp  graph_config.hpp  graph_manager.hpp  graph_model_addon.hpp  graph_node.hpp  heightmap_data.hpp  model_config.hpp  model_registry.hpp  model_utils.hpp  nodes.hpp  noise.hpp  project_model.hpp  utils.hpp
Hesiod/include/hesiod/project/: project.hpp
Hesiod/resources/: colormap.json
Hesiod/src/: base_node.cpp  config.cpp  graph_editor.cpp  graph_manager.cpp  logger.cpp  main.cpp  serialization.cpp  shortcuts.cpp
Hesiod/src/app/: app_context.cpp  app_settings.cpp  hesiod_application.cpp  style_settings.cpp
Hesiod/src/cli/: batch_mode.cpp
Hesiod/src/gui/: connection_color.cpp  create_attribute_widget.cpp  darkstyle.css  fonts.cpp  fragment_shader.vs  gui.cpp  gui_utility.cpp  gui_utils.cpp  image_preview.cpp  main_window.cpp  override_export_nodes_settings.cpp  project_ui.cpp  render.cpp  style.cpp  vertex_shader.vs  view_noise.cpp  viewer.cpp  window.cpp  window_main.cpp  windows_manager.cpp
Hesiod/src/gui/nodes/: base_node_gui.cpp  comment_gui.cpp  custom_horizontal_node_geometry.cpp  custom_node_painter.cpp  data_analysis_gui.cpp  gradient_gui.cpp  radial_displacement_to_xy_gui.cpp
Hesiod/src/gui/qt_nodes_override/: custom_horizontal_node_geometry.cpp  custom_node_painter.cpp  custom_scene_menu.cpp
Hesiod/src/gui/utils/: apply_global_style.cpp  gui_utils.cpp  render_widget_screenshot.cpp
Hesiod/src/gui/widgets/: about_dialog.cpp  app_settings_window.cpp  attributes_widget.cpp  bake_config_dialog.cpp  bool_widget.cpp  canvas_cloud_editor.cpp  cloud_widget.cpp  color_gradient_widget.cpp  color_widget.cpp  colorbar_widget.cpp  colormap_enum_widget.cpp  config_widget.cpp  coord_frame_widget.cpp  custom_qmenu.cpp  data_preview.cpp  documentation_popup.cpp  drag_float_matrix.cpp  drag_float_vec2.cpp  drag_float_vector.cpp  draw_icon.cpp  example_selector_widget.cpp  export_param_widget.cpp  filename_widget.cpp  flatten_config_dialog.cpp  float_widget.cpp  fragment_shader.vs  frame_item.cpp  graph_config_widget.cpp  graph_editor_widget.cpp  graph_manager_widget.cpp  graph_node_widget.cpp  graph_qlist_widget.cpp  graph_tabs_widget.cpp  graph_toolbar.cpp  h_preview.cpp  h_viewer2d.cpp  help_marker.cpp  helpers.cpp  hmap_brush_editor.cpp  hmap_cloud_editor.cpp  (+35 more)
Hesiod/src/gui/windows/: node_editor.cpp  node_editor_new_node_popup.cpp  node_list.cpp  node_settings.cpp  viewer_2d.cpp  viewer_3d.cpp  window.cpp  window_main.cpp  windows_manager.cpp
Hesiod/src/model/: add_graph_example.cpp  bake_config.cpp  broadcast_param.cpp  cmap.cpp  color_gradient.cpp  export_param.cpp  graph_config.cpp  graph_manager.cpp  graph_node.cpp  model_config.cpp  model_registry.cpp  post_process_heightmap.cpp  project_model.cpp  utils.cpp
Hesiod/src/model/attributes/: attribute.cpp  bool.cpp  bool_attribute.cpp  cloud.cpp  cloud_attribute.cpp  color.cpp  color_attribute.cpp  color_gradient.cpp  color_gradient_attributes.cpp  filename.cpp  filename_attribute.cpp  float.cpp  float_attribute.cpp  int.cpp  int_attribute.cpp  map_enum.cpp  map_enum_attribute.cpp  (+16 more)
Hesiod/src/project/: project.cpp
doc/generate_node_snapshot/: CMakeLists.txt  main.cpp
(+1588 files in other folders)
